# ketinit

./: Makefile  Readme.md  meson.build
example/: service
services/: agetty  hostname  local  sysctl
src/: cgroup.c  init.h  main.c  sandbox.c  service.c  socket_client.c  socket_server.c  util.c
